# Kubarr

./: .dockerignore  .gitignore  .gitmodules  .hadolint.yaml  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT_SUMMARY.md  LICENSE  OAUTH2_MIGRATION.md  README.md  claude.md  deploy.ps1  install.sh  kind-remote-config.yaml  mkdocs.yml  oauth2-proxy-config.cfg  package-lock.json  package.json  playwright.config.ts  pyproject.toml  test-auth.ps1  uninstall.sh
.claude/: settings.local.json
.github/: VERSIONING_SETUP.md  dependabot.yml
charts/: README.md
code/backend/: Cargo.toml  Dockerfile  SECURITY.md  deny.toml
code/backend/charts/cloudflared/: Chart.yaml  values.yaml
code/backend/charts/cloudflared/templates/: _helpers.tpl  deployment.yaml  secret.yaml  serviceaccount.yaml
code/backend/src/: config.rs  error.rs  lib.rs  main.rs  test_helpers.rs
code/backend/src/api/: apps.rs  audit.rs  auth.rs  extractors.rs  logs.rs  middleware.rs  mod.rs  monitoring.rs  networking.rs  notifications.rs  oauth.rs  roles.rs  settings.rs  setup.rs  storage.rs  users.rs
code/backend/src/application/: bootstrapper.rs  config.rs  database.rs  error.rs  mod.rs  pool.rs  state.rs
code/backend/src/application/config/: auth.rs  charts.rs  database.rs  kubernetes.rs  mod.rs  monitoring.rs  server.rs
code/backend/src/db/: mod.rs  pool.rs
code/backend/src/db/entities/: audit_log.rs  notification_channel.rs  oauth2_client.rs  oauth2_token.rs  oauth_account.rs  role_permission.rs  user.rs  user_notification_pref.rs
code/backend/src/endpoints/: apps.rs  audit.rs  auth.rs  cloudflare.rs  extractors.rs  frontend.rs  logs.rs  mod.rs  monitoring.rs  networking.rs  notifications.rs  oauth.rs  proxy.rs  roles.rs  settings.rs  setup.rs  storage.rs  users.rs  vpn.rs
code/backend/src/middleware/: auth.rs  mod.rs  permissions.rs  security_headers.rs
code/backend/src/migrations/: m20250101_000001_initial_schema.rs  m20260127_000001_create_users.rs  m20260127_000002_create_roles.rs  m20260127_000003_create_user_roles.rs  m20260127_000004_create_role_app_permissions.rs  m20260127_000005_create_role_permissions.rs  m20260127_000006_create_oauth2_clients.rs  m20260127_000006_create_oauth_accounts.rs  m20260127_000007_create_oauth2_authorization_codes.rs  m20260127_000007_create_oauth_providers.rs  m20260127_000008_create_oauth2_tokens.rs  m20260127_000008_create_pending_2fa_challenges.rs  m20260127_000009_create_system_settings.rs  m20260127_000010_create_user_preferences.rs  m20260127_000011_create_invites.rs  m20260127_000012_create_audit_logs.rs  m20260127_000012_create_system_settings.rs  m20260127_000013_create_notification_channels.rs  m20260127_000014_create_invites.rs  m20260127_000014_create_notification_events.rs  m20260127_000015_create_user_notification_prefs.rs  m20260127_000016_create_notification_channels.rs  m20260127_000016_create_notification_logs.rs  m20260127_000017_create_notification_events.rs  m20260127_000017_create_user_notifications.rs  m20260128_000001_create_sessions.rs  m20260128_000002_seed_defaults.rs  m20260129_000001_create_bootstrap_status.rs  m20260130_000001_create_vpn_providers.rs  m20260130_000002_create_app_vpn_configs.rs  m20260131_000001_add_port_forwarding.rs  m20260219_000001_add_account_lockout.rs  m20260219_000001_add_oauth_provider_auto_approve.rs  m20260219_000001_create_two_factor_recovery_codes.rs  m20260221_000001_create_cloudflare_tunnels.rs  m20260221_000002_add_cloudflare_api_fields.rs  mod.rs
code/backend/src/models/: app_vpn_config.rs  audit_log.rs  bootstrap_status.rs  cloudflare_tunnel.rs  mod.rs  notification_log.rs  oauth_provider.rs  pending_2fa_challenge.rs  role_app_permission.rs  server_config.rs  session.rs  system_setting.rs  two_factor_recovery_code.rs  user.rs  user_preferences.rs  vpn_provider.rs
code/backend/src/schemas/: invite.rs  mod.rs  preferences.rs  role.rs  settings.rs  user.rs
code/backend/src/services/: audit.rs  bootstrap.rs  cadvisor.rs  catalog.rs  chart_sync.rs  cloudflare.rs  deployment.rs  k8s.rs  mod.rs  network_broadcaster.rs  oauth2.rs  proxy.rs  scheduler.rs  security.rs  vpn.rs
code/backend/src/services/notification/: email.rs  mod.rs  telegram.rs
code/backend/src/templates/: login.html
code/backend/tests/: account_lockout_tests.rs  apps_endpoint_tests.rs  audit_endpoint_tests.rs  audit_filter_tests.rs  audit_tests.rs  auth_2fa_recovery_tests.rs  auth_enforcement_tests.rs  auth_extended_tests.rs  auth_flow_tests.rs  bootstrap_db_coverage_tests.rs  bootstrap_service_tests.rs  catalog_chart_loading_tests.rs  catalog_filesystem_tests.rs  catalog_service_tests.rs  catalog_tests.rs  cloudflare_endpoint_tests.rs  config_tests.rs  db_tests.rs  error_tests.rs  extractors_tests.rs  health_tests.rs  http_security_tests.rs  logs_endpoint_tests.rs  migration_tests.rs  monitoring_endpoint_tests.rs  monitoring_tests.rs  networking_endpoint_tests.rs  notification_event_coverage_tests.rs  notification_provider_tests.rs  notification_service_extended_tests.rs  notification_service_tests.rs  notifications_endpoint_tests.rs  oauth2_tests.rs  oauth_endpoint_tests.rs  oauth_tests.rs  pool_tests.rs  roles_endpoint_extended_tests.rs  roles_endpoint_tests.rs  schema_tests.rs  security_coverage_tests.rs  (+15 more)
code/backend/tests/common/: mod.rs
docker/: .dockerignore  Dockerfile.backend  Dockerfile.caddy  Dockerfile.frontend  Dockerfile.nginx  (+2 more)
kubarr-rs/: Cargo.toml
kubarr-rs/src/: config.rs  error.rs  main.rs  state.rs  test_helpers.rs
kubarr-rs/src/api/: apps.rs  audit.rs  auth.rs  extractors.rs  logs.rs  mod.rs  monitoring.rs  networking.rs  roles.rs  settings.rs  setup.rs  storage.rs  users.rs
kubarr-rs/src/db/: mod.rs  models.rs  pool.rs
kubarr-rs/src/db/entities/: invite.rs  mod.rs  notification_event.rs  oauth2_authorization_code.rs  oauth_provider.rs  role.rs  user.rs  user_notification.rs  user_role.rs
kubarr-rs/src/services/: audit.rs  catalog.rs  deployment.rs  k8s.rs  mod.rs  oauth2.rs  security.rs
kubarr-rs/src/services/notification/: email.rs  messagebird.rs  mod.rs  telegram.rs
(+504 files in other folders)
