[package]
name = "kubarr"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
authors = ["Kubarr Team"]
description = "Kubernetes application management dashboard"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "multipart"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs", "trace", "compression-gzip"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
hyper = { version = "1", features = ["full"] }
http = "1"

# Database
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros", "with-chrono"] }

# Kubernetes
kube = { version = "0.95", features = ["runtime", "client", "derive"] }
k8s-openapi = { version = "0.23", features = ["v1_29"] }

# Authentication & Security
jsonwebtoken = "9"
bcrypt = "0.15"
rsa = { version = "0.9", features = ["sha2"] }
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"
totp-rs = { version = "5", features = ["qr", "gen_secret"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# HTTP client (for Prometheus/Loki)
reqwest = { version = "0.12", features = ["json"] }

# URL encoding
urlencoding = "2"

# Configuration
dotenvy = "0.15"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
validator = { version = "0.18", features = ["derive"] }
async-trait = "0.1"
futures = "0.3"
once_cell = "1"
parking_lot = "0.12"

[dev-dependencies]
tokio-test = "0.4"
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

# Fast release build for development - use with: cargo build --profile dev-release
[profile.dev-release]
inherits = "release"
lto = "thin"
codegen-units = 16
incremental = true
