[package]
name = "kubarr"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
authors = ["Kubarr Team"]
description = "Kubernetes application management dashboard"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros", "multipart", "ws"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace", "compression-gzip"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tokio-tungstenite = "0.28"
futures-util = "0.3"
http = "1"

# Database
sea-orm = { version = "1.1", features = ["sqlx-postgres", "sqlx-sqlite", "runtime-tokio-native-tls", "macros", "with-chrono"] }
sea-orm-migration = { version = "1.1", features = ["sqlx-postgres", "sqlx-sqlite", "runtime-tokio-native-tls"] }

# Kubernetes
kube = { version = "0.99", features = ["runtime", "client", "derive"] }
k8s-openapi = { version = "0.23", features = ["v1_29"] }

# Authentication & Security
jsonwebtoken = "10"
bcrypt = "0.18"
rsa = { version = "0.9", features = ["sha2"] }
rand = "0.9"
base64 = "0.22"
hex = "0.4"
totp-rs = { version = "5", features = ["qr", "gen_secret"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# OpenAPI / Swagger
utoipa = { version = "5", features = ["axum_extras", "chrono"] }

# HTTP client (for Prometheus/VictoriaLogs and notification APIs)
reqwest = { version = "0.13", features = ["json"] }

# Email notifications
lettre = { version = "0.11", default-features = false, features = ["tokio1-native-tls", "smtp-transport", "builder"] }

# URL encoding
urlencoding = "2"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
validator = { version = "0.20", features = ["derive"] }
async-trait = "0.1"
once_cell = "1"
parking_lot = "0.12"

[dev-dependencies]
http-body-util = "0.1"
paste = "1.0"
tower = { version = "0.5", features = ["util"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

# Fast release build for development - use with: cargo build --profile dev-release
[profile.dev-release]
inherits = "release"
lto = "thin"
codegen-units = 16
incremental = true
